<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="2dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_weight="1"
        android:background="@color/purple_200"
        android:textSize="40dp"
        android:padding="10dp"
        android:gravity="right|bottom"
        tools:ignore="RtlHardcoded" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
    <Button
        android:id="@+id/btnSeven"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/_7"
        android:textSize="25dp"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:onClick="onDigit"
        tools:ignore="NestedWeights,OnClick,UsingOnClickInXml" />
    <Button
        android:id="@+id/btnEight"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/_8"
        android:textSize="25dp"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:onClick="onDigit"
        tools:ignore="NestedWeights,OnClick,UsingOnClickInXml"/>
    <Button
        android:id="@+id/btnNine"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/_9"
        android:textSize="25dp"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:onClick="onDigit"
        tools:ignore="NestedWeights,OnClick,UsingOnClickInXml"/>
    <Button
        android:id="@+id/btnDivide"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/div"
        android:textSize="25dp"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:onClick="onOperator"
        tools:ignore="NestedWeights,OnClick,UsingOnClickInXml"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
    <Button
        android:id="@+id/btnFour"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/_4"
        android:textSize="25dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:layout_weight="1"
        android:onClick="onDigit"
        tools:ignore="NestedWeights,OnClick,UsingOnClickInXml"/>
    <Button
        android:id="@+id/btnFive"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/_5"
        android:textSize="25dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:layout_weight="1"
        android:onClick="onDigit"
        tools:ignore="NestedWeights,OnClick,UsingOnClickInXml"/>
    <Button
        android:id="@+id/btnSix"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/_6"
        android:textSize="25dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:layout_weight="1"
        android:onClick="onDigit"
        tools:ignore="NestedWeights,OnClick,UsingOnClickInXml"/>
    <Button
        android:id="@+id/btnMulti"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/mul"
        android:textSize="25dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:layout_weight="1"
        android:onClick="onOperator"
        tools:ignore="NestedWeights,OnClick,UsingOnClickInXml"/>

    </LinearLayout>

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
    android:layout_weight="1"
        >
    <Button
        android:id="@+id/btnOne"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/_1"
        android:textSize="25dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:layout_weight="1"
        android:onClick="onDigit"
        tools:ignore="NestedWeights,OnClick,UsingOnClickInXml"/>
    <Button
        android:id="@+id/btnTwo"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/_2"
        android:textSize="25dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:layout_weight="1"
        android:onClick="onDigit"
        tools:ignore="NestedWeights,OnClick,UsingOnClickInXml"/>
    <Button
        android:id="@+id/btnThree"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/_3"
        android:textSize="25dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:layout_weight="1"
        android:onClick="onDigit"
        tools:ignore="NestedWeights,OnClick,UsingOnClickInXml"/>
    <Button
        android:id="@+id/btnPlus"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/plu"
        android:textSize="25dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:layout_weight="1"
        android:onClick="onOperator"
        tools:ignore="NestedWeights,OnClick,UsingOnClickInXml"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
    <Button
        android:id="@+id/btnZero"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/_0"
        android:textSize="25dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:layout_weight="1"
        android:onClick="onDigit"
        tools:ignore="NestedWeights,OnClick,UsingOnClickInXml"/>
        <Button
        android:id="@+id/btndot"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/dot"
        android:textSize="25dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:layout_weight="1"
        android:onClick="onDecimalPoint"
        tools:ignore="NestedWeights,OnClick,UsingOnClickInXml"/>
    <Button
        android:id="@+id/btnCLR"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/cr"
        android:textSize="25dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:layout_weight="1"
        android:onClick="onClear"
        tools:ignore="NestedWeights,OnClick,UsingOnClickInXml"/>
    <Button
        android:id="@+id/btnMinus"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/min"
        android:textSize="25dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:layout_weight="1"
        android:onClick="onOperator"
        tools:ignore="NestedWeights,OnClick,UsingOnClickInXml"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:text="@string/eq"
            android:textSize="25dp"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:onClick="onEqual"
            tools:ignore="NestedWeights,OnClick,UsingOnClickInXml"/>

    </LinearLayout>



</LinearLayout>